2005-08-18  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* View menu bug-fixed.

2005-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Format, Search and Help menus bug-fixed.

2005-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Preferences dialog works.

2005-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* "Jump To Subtitle" dialog is far cooler now, and it works.
	
	* New supported format: MPL2.

2005-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* TreeView model is now detached during heavy data reloading. Speed
	  increase almost 30 %. Insignificant freeze/thaw methods removed.

2005-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Major code clean-up done.
	
	* Code uses more constants now.
	
	* List is no longer sortable.
	
	* Preferences dialog exists, but is not yet functional.
	
	* Huge amounts of new bugs.

2005-08-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* New Edit menu items are now functional, although perhaps buggy.

2005-08-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* New Help menu items are now functional.

2005-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Major code clean-up done.
	
	* Lots of modules and functions renamed.

	* paths.py file is no longer written when running from source.
	
	* Changing format in save dialog now changes extension as well.

	* Invert case menu entry removed.
	
	* Shortcut keys for menu entries changed.

	* Several non-functional menu items added to Edit and Help menus.

2005-08-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Clearing and selecting under Edit menu done.

	* List right-click menu operational.

2005-08-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Character counts are now displayed in the statusbar.
	  New file: analyzer.py

2005-08-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* "Go To Subtitle" under Search menu done.
	  New files: goto-dialog.glade, searcher.py, goto.py

2005-07-31  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Format menu done.
	  New files: formatter.py (x2)
	  
	* Fixed sort order interfearing with editing.
